[package]
name = "async_channel_io"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.1.1"
futures = "0.3.30"
log = "0.4.20"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
