[package]
name = "async_channel_io"
version = "0.3.0"
edition = "2021"
authors = ["Tristan Streichenberger <TristanStreich@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/async_channel_io"
repository = "https://github.com/TristanStreich/async_channel_io"
description = """
`AsyncRead` and `AsyncWrite` implementations for `async_channel`
"""
categories = ["asynchronous", "io"]
keywords = ["async", "non-blocking", "futures", "io", "channel"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.1.1"
futures = "0.3.30"
log = "0.4.20"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
